--- a/index.html
+++ b/index.html
@@ -15,7 +15,41 @@
     <title>Your Finance Business</title>
 </head>
 
-<body>
+<body id="top-page">
+    <!-- NAVIGATION -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+        <div class="container">
+            <a href="#top-page" class="navbar-brand js-scroll-trigger">
+                <h4 class="text-success">Finance Business</h4>
+            </a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fas fa-bars ml-1"></i>
+            </button>
+            <div class="collapse navbar-collapse flex-grow-0" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto text-sm-center">
+                    <li class="nav-item">
+                        <a href="#top-page" class="nav-link js-scroll-trigger" style="font-weight: bold;">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#our-services" class="nav-link js-scroll-trigger" style="font-weight: bold;">Our
+                            Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#solutions" class="nav-link js-scroll-trigger" style="font-weight: bold;">Solutions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#about-us" class="nav-link js-scroll-trigger" style="font-weight: bold;">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link js-scroll-trigger" style="font-weight: bold;">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- END NAVIGATION -->
     
 
 </body>
