--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!-- Custom CSS -->
+    <link rel="stylesheet" href="./css/custom.css">
     <title>Your Finance Business</title>
 </head>
 
@@ -51,7 +52,75 @@
     </nav>
     <!-- END NAVIGATION -->
     
+    <!-- BANNER -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <!-- Slide One - Set the background image for this slide in the line below -->
+            <div class="carousel-item active" style="background-image: url('./img/carousel/slide_01.jpg')">
+                <div class="d-flex flex-column h-100 justify-content-center align-items-center m-auto">
+                    <h1 class="text-uppercase text-white">Financial Analysis<br>&amp; Consulting</h1>
+                    <p class="text-white my-5 px-3">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam sint nihil labore quidem aperiam
+                        sed nesciunt provident blanditiis, aut cupiditate iste quaerat eos obcaecati temporibus id.
+                        Reprehenderit explicabo autem perspiciatis!
+                    </p>
+                    <a href="#contact" class="text-uppercase btn btn-large btn-success">
+                        contact us
+                    </a>
+                </div>
 
+            </div>
+            <!-- Slide Two - Set the background image for this slide in the line below -->
+            <div class="carousel-item" style="background-image: url('./img/carousel/slide_02.jpg')">
+                <div class="d-flex flex-column h-100 justify-content-center align-items-center m-auto">
+                    <h1 class="text-uppercase text-white">Accounting<br>&amp; Management</h1>
+                    <p class="text-white my-5 px-3">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil harum itaque in, dolorum tenetur
+                        qui soluta perferendis laboriosam. Pariatur consequuntur quae natus tempore eveniet labore quasi
+                        ut reprehenderit libero! Distinctio, qui in! Dicta, eos laborum?
+                    </p>
+                    <a href="#services" class="text-uppercase btn btn-large btn-success">
+                        our services
+                    </a>
+                </div>
+
+            </div>
+            <!-- Slide Three - Set the background image for this slide in the line below -->
+            <div class="carousel-item" style="background-image: url('./img/carousel/slide_03.jpg')">
+                <div class="d-flex flex-column h-100 justify-content-center align-items-center m-auto">
+                    <h1 class="text-uppercase text-white">Market Analysis<br>&amp; Statistics</h1>
+                    <p class="text-white my-5 px-3">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. At provident possimus ex voluptatem
+                        tenetur eius, harum sit tempora porro dignissimos mollitia, dolores hic! Facere magni quae
+                        veniam, non voluptatum accusamus?
+                    </p>
+                    <a href="about.html" class="text-uppercase btn btn-large btn-success">
+                        learn more
+                    </a>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- END BANNER -->
+
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 </body>
 
 </html>
