--- a/index.html
+++ b/index.html
@@ -116,6 +116,164 @@
     </div>
     <!-- END BANNER -->
 
+    <!-- OUR SERVICES -->
+    <div class="container py-5" id="our-services">
+        <div class="text-center">
+            <h1 class="display-4">Our <span class="text-success">Services</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, quae.</p>
+        </div>
+        <!-- PILLS LIST -->
+        <ul class="nav nav-pills d-flex justify-content-center my-5">
+            <li class="nav-item mx-3 my-2">
+                <a class="nav-link active text-uppercase" data-toggle="tab" href="#tabOne">financial</a>
+            </li>
+            <li class="nav-item mx-3 my-2">
+                <a class="nav-link text-uppercase" data-toggle="tab" href="#tabTwo">investment</a>
+            </li>
+            <li class="nav-item mx-3 my-2">
+                <a class="nav-link text-uppercase" data-toggle="tab" href="#tabThree">payments</a>
+            </li>
+        </ul>
+        <!-- END PILLS LIST -->
+        <!-- PILLS CONTENT -->
+        <div class="tab-content pt-3">
+            <!-- CONTENT 01 -->
+            <div class="tab-pane fade active show" id="tabOne">
+                <div class="row mx-auto">
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/financial/financial-01.jpeg" class="card-img-top img-fluid"
+                                alt="financial-01">
+                            <div class="card-body">
+                                <h5 class="card-title text">Without Bureaucracy</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam nam omnis excepturi
+                                    quis, quaerat ea.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/financial/financial-02.jpeg" class="card-img-top img-fluid"
+                                alt="financial-02">
+                            <div class="card-body">
+                                <h5 class="card-title">Lowest Rate</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt possimus, sunt
+                                    consequatur distinctio.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END CONTENT 01 -->
+
+            <!-- CONTENT 02 -->
+            <div class="tab-pane fade" id="tabTwo">
+                <div class="row mx-auto">
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/investment/investiment-01.jpeg" class="card-img-top img-fluid"
+                                alt="investment-01">
+                            <div class="card-body">
+                                <h5 class="card-title">Quick Return</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, aliquam natus
+                                    distinctio velit rem suscipit.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/investment/investiment-02.jpeg" class="card-img-top img-fluid"
+                                alt="investment-02">
+                            <div class="card-body">
+                                <h5 class="card-title">Easy to Follow</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum nihil soluta illo
+                                    exercitationem, voluptatibus in.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/investment/investiment-03.jpeg" class="card-img-top img-fluid"
+                                alt="investment-03">
+                            <div class="card-body">
+                                <h5 class="card-title">First in Bitcoins</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt, molestiae
+                                    quaerat nesciunt autem illum suscipit.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END CONTENT 02 -->
+
+            <!-- CONTENT 03 -->
+            <div class="tab-pane fade" id="tabThree">
+                <div class="row mx-auto">
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/payments/payment-01.jpeg" class="card-img-top img-fluid"
+                                alt="payment-01">
+                            <div class="card-body">
+                                <h5 class="card-title">Card Payment</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima vero sapiente nam
+                                    eum, quidem quis.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/payments/payment-02.jpeg" class="card-img-top img-fluid"
+                                alt="payment-02">
+                            <div class="card-body">
+                                <h5 class="card-title">Online Payment</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sint esse architecto
+                                    iusto. Nisi, inventore.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/services/payments/payment-03.jpeg" class="card-img-top img-fluid"
+                                alt="payment-03">
+                            <div class="card-body">
+                                <h5 class="card-title">Physical Payment</h5>
+                                <p class="card-text">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum, commodi quaerat.
+                                    Voluptas odio tenetur mollitia.
+                                </p>
+                                <a href="#" class="btn btn-success text-uppercase">read more</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END CONTENT 03 -->
+        </div>
+        <!-- END PILLS CONTENT -->
+    </div>
+    <!-- END OUR SERVICES -->
+    
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
