--- a/index.html
+++ b/index.html
@@ -274,6 +274,58 @@
     </div>
     <!-- END OUR SERVICES -->
     
+    <!-- SOLUTIONS -->
+    <div class="solutions text-white" id="solutions">
+        <div class="container d-flex h-100 align-items-center">
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div>
+                        <h2 class="mb-5"><span class="text-success">Our solutions</span><br> for your <em>business
+                                growth</em></h2>
+                        <p>
+                            Pellentesque ultrices at turpis in vestibulum. Aenean pretium elit nec congue elementum.
+                            Nulla
+                            luctus laoreet porta. Maecenas at nisi tempus, porta metus vitae, faucibus augue.
+                            <br><br>Fusce et venenatis ex. Quisque varius, velit quis dictum sagittis, odio velit
+                            molestie
+                            nunc, ut posuere ante tortor ut neque.
+                        </p>
+                        <a href="#" class="btn btn-large btn-success text-uppercase mt-5">read more</a>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 align-self-center mt-5">
+                    <div class="row text-center">
+                        <div class="col-md-6">
+                            <div class="p-4 border mx-2 my-2">
+                                <div class="text-success display-5">945</div>
+                                <div>Work Hours</div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="p-4 border mx-2 my-2">
+                                <div class="text-success display-5">1280</div>
+                                <div>Great Reviews</div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="p-4 border mx-2 my-2">
+                                <div class="text-success display-5">578</div>
+                                <div>Projects Done</div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="p-4 border mx-2 my-2">
+                                <div class="text-success display-5">26</div>
+                                <div>Awards Won</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END SOLUTIONS -->
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
