added about section

--- a/index.html
+++ b/index.html
@@ -326,6 +326,70 @@
     </div>
     <!-- END SOLUTIONS -->
 
+    <!-- ABOUT US -->
+    <div class="container py-5" id="about-us">
+        <div class="row bg-light my-5">
+            <div class="col-md-6">
+                <div>
+                    <img src="./img/more-info.jpg" class="img-fluid h-100" alt="more-info">
+                </div>
+            </div>
+            <div class="col-md-6 align-self-center p-4 pl-0">
+                <div>
+                    <p class="display-5">Who we are</p>
+                    <h2>
+                        Get to know about
+                        <em class="text-success">our company</em>
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis sint mollitia quae tempore
+                        dicta facilis minima esse accusantium quos nam. Vitae, molestiae nisi dolorum voluptas ab
+                        delectus repudiandae ut voluptatibus!
+                        <br><br>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam fuga suscipit quam minima
+                        laborum inventore assumenda illo repudiandae reiciendis? Corrupti molestiae eos animi nulla
+                        temporibus, dolor sint magnam dolorem optio!
+                    </p>
+                    <a href="#" class="btn btn-large btn-success text-uppercase">Read More</a>
+                </div>
+            </div>
+        </div>
+        <div class="testimonials text-center py-5">
+            <div>
+                <h2 class="my-3">What they say <em class="text-success">about us</em></h2>
+                <h6 class="my-3">testimonials from our greatest clients</h6>
+            </div>
+            <div class="row pt-5">
+                <div class="col-12 col-md-6">
+                    <div>
+                        <img src="./img/testimonials/testimonials-01.jpeg" alt="testimonials-01"
+                            class="img-fluid rounded-circle w-50">
+
+                    </div>
+                    <h4>Andrew Boom</h4>
+                    <span class="text-success">Marketing Head</span>
+                    <p class="p-4">
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Et tempora vero officia doloremque
+                        earum fugiat facilis veritatis labore consequatur! Tempora sed iusto error doloribus et cumque
+                        exercitationem beatae numquam placeat.""
+                    </p>
+                </div>
+                <div class="col-12 col-md-6">
+                    <img src="./img/testimonials/testimonials-02.jpeg" alt="testimonials-02"
+                        class="img-fluid rounded-circle w-50">
+                    <h4>Maria Green</h4>
+                    <span class="text-success">Web Design</span>
+                    <p class="p-4">
+                        "Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique non inventore magnam maxime
+                        asperiores sed voluptates iste tempora esse odit, aliquam itaque! Accusantium officia sapiente
+                        cum fugit, ipsum ratione nulla."
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END ABOUT US -->
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
