added contact section

--- a/index.html
+++ b/index.html
@@ -390,6 +390,51 @@
     </div>
     <!-- END ABOUT US -->
 
+    <!-- CONTACT -->
+    <div class="container-fluid bg-light py-5">
+        <div class="container" id="contact">
+            <div class="text-center py-5">
+                <h2>Request a <span class="text-success">call back</span></h2>
+                <p>Etiam suscipit ante a odio consequat</p>
+            </div>
+            <div>
+                <form>
+                    <div class="row">
+                        <div class="col-lg-4 col-md-12 col-sm-12 my-3">
+                            <fieldset>
+                                <input name="name" type="text" class="form-control" id="name" placeholder="First Name">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-4 col-md-12 col-sm-12 my-3">
+                            <fieldset>
+                                <input name="name" type="text" class="form-control" id="name" placeholder="Last Name">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-4 col-md-12 col-sm-12 my-3">
+                            <fieldset>
+                                <input name="email" type="text" class="form-control" id="email" placeholder="E-Mail">
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12 my-3">
+                            <fieldset>
+                                <textarea name="message" rows="6" class="form-control" id="message"
+                                    placeholder="Your Message" required=""></textarea>
+                            </fieldset>
+                        </div>
+                        <div class="col-lg-12">
+                            <fieldset>
+                                <button type="submit" id="form-submit" class="btn btn-success my-3">
+                                    Send Message
+                                </button>
+                            </fieldset>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END CONTACT -->
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
