--- a/index.html
+++ b/index.html
@@ -458,6 +458,102 @@
     </div>
     <!-- END CLIENTS -->
     
+    <!-- FOOTER -->
+    <footer class="text-center text-lg-start bg-success text-light">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
+            </div>
+            <!-- Left -->
+
+            <!-- Right -->
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Finance Business
+                        </h6>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non distinctio autem quia amet nesciunt aliquam tempora excepturi facilis labore, repellendus dolore quisquam? Quia, itaque perferendis.
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Useful links
+                        </h6>
+                        <p>
+                            <a href="#top-page" class="text-reset text-uppercase nav-link js-scroll-trigger">Home</a>
+                        </p>
+                        <p>
+                            <a href="#our-services" class="text-reset text-uppercase nav-link js-scroll-trigger">Our Services</a>
+                        </p>
+                        <p>
+                            <a href="#solutions" class="text-reset text-uppercase nav-link js-scroll-trigger">Solutions</a>
+                        </p>
+                        <p>
+                            <a href="#about-us" class="text-reset text-uppercase nav-link js-scroll-trigger">About Us</a>
+                        </p>
+                        <p>
+                            <a href="#contact" class="text-reset text-uppercase nav-link js-scroll-trigger">Contact</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Contact
+                        </h6>
+                        <p class="d-flex justify-content-center">
+                            <i class="fas fa-envelope me-3"></i>
+                            info@financebusiness.com
+                        </p>
+                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
+                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            © <span id="year"></span> Copyright:
+            <a class="text-reset fw-bold" href="https://templatemo.com/tm-545-finance-business" target="_blank">templatemo.com</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- END FOOTER -->
+
     <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
